# LWMS

./: .gitignore  CMakeLists.txt  README.md
examples/file/: CMakeLists.txt
src/: demo.c  window.c  window.h
src/backends/: win32window.c  win32window.h  x11window.c  x11window.h
